--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -42,22 +42,22 @@ p:last-child { margin-bottom: 0; }
 
 /**/
 .page {
-	background-color: #222222;	
+	background-color: #222222;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
-	font-weight: 300;		
+	font-weight: 300;
 	padding: 30px 15px;
 	overflow-x: hidden;
 }
 
 .page-bg-imgs-list { display: none; }
 
-.header { 
+.header {
 	max-width: 420px;
-	overflow: auto; 
+	overflow: auto;
 }
 
-.content-wrapper { margin-top: 365px; }
+/*.content-wrapper { margin-top: 25px; }*/
 
 .content {
 	max-width: 600px;
@@ -83,13 +83,13 @@ p:last-child { margin-bottom: 0; }
 
 .box {
 	display: block;
-	padding: 10px;	
+	padding: 10px;
 }
 
 .box-text {
 	border: 1px solid white;
-	color: white;	
-	font-style: italic;	
+	color: white;
+	font-style: italic;
 	width: 100%;
 	height: 100%;
 }
@@ -115,27 +115,27 @@ p:last-child { margin-bottom: 0; }
 .box-nav-item {
 	margin-bottom: 10px;
 	font-size: 1.9em;
-	-webkit-transition: all 0.3s ease;	
-	transition: all 0.3s ease;	
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
 }
 
 .box-nav-item-link { padding: 10px; }
 
 .box-nav-item:hover, .box-nav-item:focus, .box-nav-item.active {
-	background-color: rgba(241, 241, 241, 0.59);	
+	background-color: rgba(241, 241, 241, 0.59);
 }
 
-.box-nav-item:hover .box-text-nav-item, 
+.box-nav-item:hover .box-text-nav-item,
 .box-nav-item:focus .box-text-nav-item,
-.box-nav-item.active .box-text-nav-item {	
+.box-nav-item.active .box-text-nav-item {
 	color: black;
 	border: 1px solid black;
 }
 
 /* footer */
 
-.footer { 
-	display: none; 
+.footer {
+	display: none;
 	position: fixed;
 	bottom: 10px;
 	left: 30px;
@@ -143,9 +143,9 @@ p:last-child { margin-bottom: 0; }
 
 .footer a {	color: rgba(255, 255, 255, 0.8); }
 
-.copyright-text { 
+.copyright-text {
 	color: rgba(255, 255, 255, 0.8);
-	font-size: 0.8em;	
+	font-size: 0.8em;
 }
 
 
@@ -160,7 +160,7 @@ p:last-child { margin-bottom: 0; }
 }
 
 .block-keep-ratio {	position: relative; }
-	
+
 .block-keep-ratio-content {
 	position: absolute;
 	top: 0; bottom: 0; right: 0; left: 0;
@@ -196,7 +196,7 @@ p:last-child { margin-bottom: 0; }
 /* FlexSlider Styles
 -------------------------------------------- */
 
-.flexslider { 
+.flexslider {
     border-radius: 0;
     margin-bottom: 5px;
 }
@@ -251,7 +251,7 @@ p:last-child { margin-bottom: 0; }
 	width: 150px;
 	height: 50px;
 	text-transform: uppercase;
-	transition: all 0.3s ease;	
+	transition: all 0.3s ease;
 }
 
 .submit-btn:hover, .submit-btn:focus {
@@ -288,9 +288,9 @@ p:last-child { margin-bottom: 0; }
 
 	.content { margin: 0 0 0 auto; }
 
-	.content-wrapper { 
-		margin-top: 30px; 
-		margin-bottom: 30px;		
+	.content-wrapper {
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 
 	.footer { position: static;	}
@@ -301,18 +301,18 @@ p:last-child { margin-bottom: 0; }
 }
 
 @media screen and (max-width: 1199px) and (min-width: 992px) {
-	
+
 	.block-width-half { width: 48%; }
-	
+
 	.box-nav-item { font-size: 1.4em; }
 
 	.site-title-text { font-size: 3em; }
 }
 
 @media screen and (max-width: 480px) {
-	
+
 	.block-width-half { width: 48%; }
-	
+
 	.box-nav-item { font-size: 1.4em; }
 
 	.site-title-text { font-size: 3em; }
