--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -42,7 +42,7 @@ p:last-child { margin-bottom: 0; }
 
 /**/
 .page {
-	background-color: #222222;
+	/*background-color: #222222;*/
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 	font-weight: 300;
@@ -68,6 +68,7 @@ p:last-child { margin-bottom: 0; }
 .content-gallery { max-width: 900px; }
 
 .content-text {
+  border: 1px solid black;
 	background-color: white;
 	padding: 40px;
 }
@@ -95,7 +96,7 @@ p:last-child { margin-bottom: 0; }
 }
 
 .box-white { background-color: rgba(255, 255, 255, 0.3);	}
-.box-black { background-color: rgba(0, 0, 0, 0.7); }
+.box-black { background-color: #7BBF6A; }
 
 .site-title-text {
 	font-size: 3.8em;
