--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -42,7 +42,7 @@ p:last-child { margin-bottom: 0; }
 
 /**/
 .page {
-	/*background-color: #222222;*/
+	background-color: #f6f6f6;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 	font-weight: 300;
@@ -60,8 +60,7 @@ p:last-child { margin-bottom: 0; }
 /*.content-wrapper { margin-top: 25px; }*/
 
 .content {
-	max-width: 600px;
-	margin-left: auto;
+	max-width: 900px;
 	margin-right: 0;
 }
 
@@ -69,7 +68,6 @@ p:last-child { margin-bottom: 0; }
 
 .content-text {
   border: 1px solid black;
-	background-color: white;
 	padding: 40px;
 }
 
@@ -88,15 +86,15 @@ p:last-child { margin-bottom: 0; }
 }
 
 .box-text {
-	border: 1px solid white;
-	color: white;
+	border: 1px solid black;
+	color: black;
 	font-style: italic;
 	width: 100%;
 	height: 100%;
 }
 
 .box-white { background-color: rgba(255, 255, 255, 0.3);	}
-.box-black { background-color: #7BBF6A; }
+.box-black { background-color: black; }
 
 .site-title-text {
 	font-size: 3.8em;
@@ -122,14 +120,14 @@ p:last-child { margin-bottom: 0; }
 
 .box-nav-item-link { padding: 10px; }
 
-.box-nav-item:hover, .box-nav-item:focus, .box-nav-item.active {
-	background-color: rgba(241, 241, 241, 0.59);
-}
+/*.box-nav-item:hover, .box-nav-item:focus, .box-nav-item.active {
+	background-color: #f6f6f6;
+}*/
 
 .box-nav-item:hover .box-text-nav-item,
 .box-nav-item:focus .box-text-nav-item,
 .box-nav-item.active .box-text-nav-item {
-	color: black;
+	color: #64B24D;
 	border: 1px solid black;
 }
 
@@ -233,8 +231,8 @@ p:last-child { margin-bottom: 0; }
 .form-control:focus {
     border-color: rgb(0, 218, 79);
     outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 200, 81,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 200, 81, 0.6);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px #64B24D;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px #64B24D;
 }
 
 .form-control {
