--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -60,8 +60,8 @@ p:last-child { margin-bottom: 0; }
 /*.content-wrapper { margin-top: 25px; }*/
 
 .content {
-	max-width: 900px;
-	margin-right: 0;
+	max-width: 600px;
+  margin-left: 0;
 }
 
 .content-gallery { max-width: 900px; }
@@ -285,7 +285,7 @@ p:last-child { margin-bottom: 0; }
 		padding-right: 0;
 	}
 
-	.content { margin: 0 0 0 auto; }
+	.content { margin: 0; }
 
 	.content-wrapper {
 		margin-top: 30px;
