--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -152,6 +152,7 @@ p:last-child { margin-bottom: 0; }
 
 .margin-t-30 {	margin-top: 30px; }
 .margin-b-20 {	margin-bottom: 20px; }
+.margin-t-30p { margin-top: 30%; }
 
 .block-keep-ratio,
 .block-keep-ratio-content {
@@ -191,6 +192,18 @@ p:last-child { margin-bottom: 0; }
     text-align: center;
 }
 
+.contact-icons {
+  min-height: 200px;
+}
+
+.contact-icons img {
+  width: 100%;
+  height: auto;
+}
+
+.contact-page {
+  margin-top: 20%;
+}
 
 /* FlexSlider Styles
 -------------------------------------------- */
@@ -297,6 +310,7 @@ p:last-child { margin-bottom: 0; }
 
 @media screen and (max-width: 767px) {
 	.content-wrapper { position: static; }
+  .content { max-width: 420px;}
 }
 
 @media screen and (max-width: 1199px) and (min-width: 992px) {
