--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -97,9 +97,8 @@ p:last-child { margin-bottom: 0; }
 .box-black { background-color: black; }
 
 .site-title-text {
-	font-size: 3.8em;
-	padding-top: 20px;
-	padding-bottom: 25px;
+	font-size: 3.5em;
+  padding: 20px 15px 25px 15px;
 	text-align: center;
 }
 
@@ -190,10 +189,6 @@ p:last-child { margin-bottom: 0; }
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
-}
-
-.contact-icons {
-  min-height: 200px;
 }
 
 .contact-icons img {
