--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -196,6 +196,11 @@ p:last-child { margin-bottom: 0; }
   height: auto;
 }
 
+.contact-icons img:hover {
+  width: calc(100% - 5px);
+  opacity: 0.7;
+}
+
 .contact-page {
   margin-top: 20%;
 }
