--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -74,8 +74,8 @@ html[xmlns] .flexslider .slides {
  * ====================================================================================================================*/
 .flexslider {
   margin: 0 0 60px;
-  background: #ffffff;
-  border: 4px solid #ffffff;
+  background: #f6f6f6;
+  border: 4px solid #f6f6f6;
   position: relative;
   zoom: 1;
   -webkit-border-radius: 4px;
