--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -97,7 +97,7 @@ p:last-child { margin-bottom: 0; }
 .box-black { background-color: black; }
 
 .site-title-text {
-	font-size: 3.5em;
+	font-size: 3.4em;
   padding: 20px 15px 25px 15px;
 	text-align: center;
 }
@@ -250,19 +250,6 @@ p:last-child { margin-bottom: 0; }
   padding-bottom: 5px;
 }
 
-.slider-link {
-  display: none;
-  font-size: 1.5em;
-  position: absolute;
-  color: white;
-  font-weight: bold;
-  z-index: 15;
-  top: 35%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
 /* Contact form */
 
 .contact-form {	margin-top: 30px; }
@@ -364,3 +351,24 @@ p:last-child { margin-bottom: 0; }
 	.content-text-gallery { padding: 5px; }
 
 }
+
+.overlay-text {
+  position: fixed;
+  margin-top: 10px;
+  padding: 5px 10px 7px;
+  margin-left: calc(16.66% - 90px);
+  border-radius: 3px;
+  font-size: 0.75em;
+  box-shadow: inset 0 -1px 0 1px rgba(0,0,0,.1), inset 0 -10px 20px rgba(0,0,0,.1);
+  cursor: pointer;
+  background: #f6f6f6;
+  color: #64B24D;
+  display: none;
+}
+
+.overlay-text:hover {
+  background: #f5f5f5;
+  color: #008000;
+}
+
+
