--- a/css/index.css
+++ b/css/index.css
@@ -16,3 +16,42 @@
   background: #f5f5f5;
   color: #008000;
 }
+
+.secret-game {
+  display: none;
+  text-align: center;
+}
+
+
+/*Game css*/
+.secret-game .box-text {
+  padding: 15px 25px;
+}
+
+td {
+  border-right: 1px solid gray;
+  border-left: 1px solid gray;
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+}
+
+table {
+  float: right;
+  margin-right: 20%;
+  margin-left: 10px;
+}
+
+#missed {
+  margin-top: 1em;
+}
+
+@media screen and (max-width: 767px) {
+  .game-instructions {
+    clear: both;
+  }
+  table {
+    float: none;
+    margin: 0 auto;
+  }
+}
