--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -209,13 +209,13 @@ p:last-child { margin-bottom: 0; }
   height: auto;
 }
 
+.content.contact {
+  max-width: 600px;
+}
+
 .contact-icons img:hover {
   width: calc(100% - 5px);
   opacity: 0.7;
-}
-
-.contact-page {
-  margin-top: 20%;
 }
 
 /* FlexSlider Styles
@@ -253,7 +253,10 @@ p:last-child { margin-bottom: 0; }
 
 /* Contact form */
 
-.contact-form {	margin-top: 30px; }
+.contact-form {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 .form-group { margin-bottom: 20px; }
 
